force-app/main/default/objects/Incremento_CS__c/fields/consecutive__c.field-meta.xml
<CustomField>
    <fullName>consecutive__c</fullName>
    <label>consecutive</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>