force-app/main/default/objects/Incremento_CS__c/fields/prefix__c.field-meta.xml
<CustomField>
    <fullName>prefix__c</fullName>
    <description>Prefijo a usar</description>
    <label>prefix</label>
    <length>3</length>
    <type>Text</type>
</CustomField>