force-app/main/default/objects/Incremento_CS__c/fields/prefix_cancel__c.field-meta.xml
<CustomField>
    <fullName>prefix_cancel__c</fullName>
    <description>Prefix used in cancelled invoice</description>
    <label>prefix cancel</label>
    <length>4</length>
    <type>Text</type>
</CustomField>