force-app/main/default/objects/Incremento_CS__c/fields/year__c.field-meta.xml
<CustomField>
    <fullName>year__c</fullName>
    <label>year</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>